src/test/ui/derives/deriving-meta-empty-trait-list.stderr
error: unused attribute
  --> $DIR/deriving-meta-empty-trait-list.rs:3:1
   |
LL | #[derive()]
   | ^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/deriving-meta-empty-trait-list.rs:1:9
   |
LL | #![deny(unused)]
   |         ^^^^^^
   = note: `#[deny(unused_attributes)]` implied by `#[deny(unused)]`

error: aborting due to previous error

